# Intel-GPU-Community-Issue-Tracker-IGCIT

./: .gitignore  .gitmodules  CHANGELOG.md  README.md
.github/ISSUE_TEMPLATE/: 85-bug-wgame-arc.yml  85-bug-wgame-coreUltraArc.yml  86-bug-wapp-arc.yml  86-bug-wapp-coreUltraArc.yml  87-bug-wgame-arcAndXe.yml  87-bug-wgame-xe.yml  88-bug-wapp-arcAndXe.yml  88-bug-wapp-xe.yml  89-bug-wgame-legacy.yml  90-bug-wapp-legacy.yml  98-display-issue.yml  99-feature-request.yml  bug-report---emulator-devs.md  bug-report---windows-applications-arc-graphics.yml  bug-report---windows-applications-core-ultra-with-arc-graphics.yml  bug-report---windows-applications.yml  bug-report---windows-games-arc-graphics.yml  bug-report---windows-games-core-ultra-with-arc-graphics.yml  bug-report---windows-games.md  bug-report---windows-games.yml  feature-request.yml  igcit-issue-template.md
IGCIT Driver Switch/: CMakeLists.txt  ExtractDriverForInstallThread.h  Form1.Designer.cs  Form1.cs  Form1.resx  GetDriversListThread.h  IGCIT Driver Switch.csproj  IGCIT Driver Switch.sln  IGCITDriverSwitch.cpp  IGCITDriverSwitch.h  IGCITDriverSwitch.qrc  IGCITDriverSwitch.rc  IGCITDriverSwitch.sln  IGCITDriverSwitch.ui  IGCITDriverSwitch.vcxproj  IGCITDriverSwitch.vcxproj.filters  InstallerProcessWaitThread.h  Program.cs  README.md  RestoreDriverWaitThread.h  app.manifest  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  packages.config  resource.h
IGCIT Driver Switch/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
IGCIT Helper/: App.config  CMakeLists.txt  CommonData.cs  ExtractDumpsCompressThread.h  Form1.Designer.cs  Form1.cs  Form1.resx  Form2.Designer.cs  Form2.cs  IGCIT Helper.csproj  IGCIT Helper.sln  IGCITHelper.rc  IGCITHttpClient.cs  Program.cs  Utils.cs  igcithelper-resource.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  packages.config  tdrdelay.Designer.cs  tdrdelay.cs
IGCIT Helper/7z/: License.txt
IGCIT Helper/Events/: DialogCancelEvent.cs  DialogCancelEventArgs.cs  DialogType.cs
IGCIT Helper/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
IGCIT Helper/bit7z/: BUILD.txt
